# AIStyler

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  style_guides.json
backend/: Dockerfile  alembic.ini  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
backend/app/: config.py  database.py  db_models.py  main.py  models.py
backend/app/articles/: models.py  router.py  schemas.py  service.py
backend/app/auth/: dependencies.py  router.py  service.py
backend/app/styleguides/: models.py  router.py  schemas.py  service.py
backend/app/users/: dependencies.py  models.py  router.py  schema.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 2025-08-08_init_tables.py  2025-08-12_add_prompt_to_text_coreection_history.py  2025-08-12_create_prompt_table.py  2025-09-10_add_operation_type_and_language_fields_.py  2025-09-11_add_original_text_to_history.py  2025-09-11_update_enum_values_to_uppercase.py  2025-09-12_add_news_key_category_to_text_.py  2025-09-12_remove_article_id_from_text_correction_.py  2025-09-12_remove_articles_unique_constraint_news_.py  2025-09-16_update_style_guides_table_for_json_.py  2025-09-17_add_cms_system_user_and_cms_author_field.py  2025-09-17_add_public_id_uuid_field_to_articles.py  2025-09-17_add_seo_title_to_article_category_enum.py  2025-09-18_add_articles_translator_to_.py  2025-09-18_restore_unique_constraint_on_articles_.py  2025-09-19_add_sentence_level_fields_to_text_.py  (+6 more)
backend/requirements/: base.txt  dev.txt
backend/tests/: conftest.py
(+60 files in other folders)
