[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "bcrypt>=4.0.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "ruff>=0.12.8",
    "sqladmin>=0.21.0",
    "sqlalchemy>=2.0.42",
    "typer>=0.16.0",
    "uvicorn>=0.35.0",
    "greenlet>=3.2.4",
    "aiosqlite>=0.21.0",
    "deepl>=1.22.0",
    "openai>=1.107.1",
    "pysbd>=0.3.4",
    "nltk>=3.9.2",
    "google-genai>=1.50.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
